# ECUPL-Course-Sniper

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md
src/ecupl_course_sniper/: __init__.py  browser.py  cli.py  engine.py  gateway.py  gui.py  models.py  simulator.py
tests/: test_engine.py
