[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ecupl-course-sniper"
version = "0.1.0"
description = "A safe course-seat monitoring and registration simulation project"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "ChengDSYJ-Studio" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
course-sniper = "ecupl_course_sniper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ecupl_course_sniper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

